--- a/exercise_03/1_cifar10-image-dataset.ipynb
+++ b/exercise_03/1_cifar10-image-dataset.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -763,9 +763,29 @@
    "source": [
     "# You first have to load all rescaled images\n",
     "rescaled_images = []\n",
+    "\n",
     "for sample in tqdm(dataset_rescaled, position=0, leave=True):\n",
     "    rescaled_images.append(sample[\"image\"])\n",
     "rescaled_images = np.array(rescaled_images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(rescaled_images.shape)\n",
+    "channel_index = 1\n",
+    "channel_pixels = rescaled_images[:, :, :, channel_index].flatten()\n",
+    "\n",
+    "plt.figure(figsize=(6, 4))\n",
+    "plt.hist(channel_pixels, bins=500, color='blue', alpha=0.7)\n",
+    "plt.title(\"Rescaled Pixel Values (Channel 0, All Images)\")\n",
+    "plt.xlabel(\"Pixel Intensity\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -824,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -866,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -906,6 +926,8 @@
     "# Don't change the values of these variables - the test validates only this specific pixel.\n",
     "\n",
     "orig_data = ImageFolderDataset(root=cifar_root)\n",
+    "print(cifar_mean)\n",
+    "print(cifar_std)\n",
     "_ = test_normalization_transform(orig_data, dataset, cifar_mean, cifar_std)\n"
    ]
   },
@@ -967,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1016,7 +1038,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "i2dl",
    "language": "python",
    "name": "python3"
   },
@@ -1030,12 +1052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "f9fd0696167aaed30d55c31fd713b4c23f5cf987c5457682b34d44d5309ecf99"
-   }
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
